--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,14 @@ edition = "2021"
 actix-multipart = "0.6.1"
 actix-web = {version = "4.4.0", default-features = false, features = ["rustls", "macros"]}
 anyhow = "1.0.75"
+base64 = "0.21.5"
 futures-util = "0.3.28"
 image = {version = "0.24.7"}
 md5 = "0.7.0"
+openssl = "0.10.57"
 redis = "0.23.3"
 serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0"
 strum = { version = "0.25.0", features = ["derive"] }
+thiserror = "1.0.50"
 tokio = { version = "1.33.0", default-features = false, features = ["macros", "rt-multi-thread"] }
