--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,6 @@ services:
         image: redis
         ports:
             - "6379:6379"
+        environment:
+            - REDIS_SAVE=""
+            - REDIS_APPENDONLY=no
