--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "rs-cdn"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "rs_cdn"
+path = "src/main.rs"
+
+[lib]
+name = "rs_cdn"
+path = "src/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -14,6 +22,7 @@ futures-util = "0.3.28"
 image = {version = "0.24.7"}
 md5 = "0.7.0"
 openssl = "0.10.57"
+openssl-sys = { version = "0.9.97", features = ["vendored"] }
 redis = "0.23.3"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0"
