feat: add firewall feature that whitelists IPs

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,18 +1,16 @@
 version: "3"
 
 services:
-    http:
+    cdn:
         build: .
-        ports:
-            - "8080:8080"
         environment:
-            - REDIS_HOST=redis://redis
             - CDN_STORAGE_PATH=/srv/cdn
-        networks:
-            - cdn
+            - IP_WHITELIST=127.0.0.1,::1
+            - REDIS_HOST=redis://127.0.0.1
         volumes:
             - ./:/usr/src/rs-cdn
         command: ./target/x86_64-unknown-linux-gnu/debug/rs_cdn
+        network_mode: host
         depends_on:
             redis:
                 condition: service_started
@@ -24,8 +22,28 @@ services:
             # This disables persistence
             - REDIS_SAVE=""
             - REDIS_APPENDONLY=no
-        networks:
-            - cdn
+    nginx:
+        image: nginx
+        network_mode: host
+        command: >
+            sh -c "echo '
+            worker_processes auto;
+            events {
+                worker_connections 1024;
+            }
+            http {
+                server {
+                    listen 80;
+                    server_name localhost;
+                    access_log  off;
 
-networks:
-    cdn:
+                    location / {
+                        proxy_set_header Host $$host;
+                        proxy_set_header X-Real-IP $$remote_addr;
+                        proxy_pass http://127.0.0.1:8080/;
+                    }
+                }
+            }' > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+        depends_on:
+            cdn:
+                condition: service_started
