security: configure ratelimit in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,19 @@ events {
 }
 
 http {
+    map $request_method $ratelimit_key {
+        POST     '';
+        default  $binary_remote_addr;
+    }
+    limit_req_zone $ratelimit_key zone=ratelimit:50m rate=20r/s;
+    limit_req_status 429;
+
     server {
         listen 80;
         server_name localhost;
         access_log  off;
+        error_log  off;
+        limit_req zone=ratelimit;
 
         location / {
             proxy_set_header Host $host;
