--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,8 @@ http {
     limit_req_zone $ratelimit_key zone=ratelimit:50m rate=20r/s;
     limit_req_status 429;
 
+    client_max_body_size 20M;
+
     server {
         listen 80;
         server_name localhost;
