security: switch to sha-1 for broader support, replacing md5
The SubtleCrypto digest method does not recognize md5 as an algorithm, so to keep it simple, we simply just switch to sha-1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ anyhow = "1.0.75"
 base64 = "0.21.5"
 colored = "2.1.0"
 futures-util = "0.3.28"
+hex = "0.4.3"
 image = {version = "0.24.7"}
-md5 = "0.7.0"
 openssl = "0.10.57"
 openssl-sys = { version = "0.9.97", features = ["vendored"] }
 redis = "0.23.3"
