--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ actix-web = {version = "4.4.0", default-features = false, features = ["rustls", 
 anyhow = "1.0.75"
 base64 = "0.21.5"
 colored = "2.1.0"
+confy = "0.6.1"
 futures-util = "0.3.28"
 hex = "0.4.3"
 image = {version = "0.24.7"}
