--- a/compose.yaml
+++ b/compose.yaml
@@ -5,17 +5,19 @@ services:
         build: .
         environment:
             - CDN_STORAGE_PATH=/srv/cdn
-            - IP_WHITELIST=127.0.0.1,::1
-            - REDIS_HOST=redis://127.0.0.1
+            - REDIS_HOST=redis://redis
         volumes:
             - ./:/usr/src/rs-cdn
         command: ./target/x86_64-unknown-linux-gnu/debug/rs_cdn
-        network_mode: host
+        networks:
+            - cdn
         depends_on:
             redis:
                 condition: service_started
     redis:
         image: redis
+        networks:
+            - cdn
         ports:
             - "6379:6379"
         environment:
@@ -24,9 +26,15 @@ services:
             - REDIS_APPENDONLY=no
     nginx:
         image: nginx
-        network_mode: host
+        ports:
+            - 80:80
+        networks:
+            - cdn
         volumes:
             - ./nginx.conf:/etc/nginx/nginx.conf
         depends_on:
             cdn:
                 condition: service_started
+
+networks:
+    cdn:
