--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
         location / {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://127.0.0.1:8080/;
+            proxy_pass http://cdn:8080/;
         }
     }
 }
