--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,12 @@ confy = "0.6.1"
 futures-util = "0.3.28"
 hex = "0.4.3"
 image = {version = "0.24.7"}
+log = "0.4.21"
+log4rs = "1.3.0"
 openssl = "0.10.57"
 openssl-sys = { version = "0.9.97", features = ["vendored"] }
 redis = "0.23.3"
+regex = "1.10.4"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0"
 strum = { version = "0.25.0", features = ["derive"] }
