--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,17 @@ path = "src/lib.rs"
 [dependencies]
 actix-cors = "0.6.5"
 actix-multipart = "0.6.1"
-actix-web = {version = "4.4.0", default-features = false, features = ["rustls", "macros"]}
+actix-web = { version = "4.4.0", default-features = false, features = [
+    "rustls",
+    "macros",
+] }
 anyhow = "1.0.75"
 base64 = "0.21.5"
 colored = "2.1.0"
 confy = "0.6.1"
 futures-util = "0.3.28"
 hex = "0.4.3"
-image = {version = "0.24.7"}
+image = "0.24.7"
 log = "0.4.21"
 log4rs = "1.3.0"
 openssl = "0.10.57"
@@ -34,4 +37,7 @@ serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0"
 strum = { version = "0.25.0", features = ["derive"] }
 thiserror = "1.0.50"
-tokio = { version = "1.33.0", default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.33.0", default-features = false, features = [
+    "macros",
+    "rt-multi-thread",
+] }
