--- a/log4rs.yaml
+++ b/log4rs.yaml
@@ -6,6 +6,6 @@ appenders:
         encoder:
             pattern: "{d} - {l} - {m}{n}"
 root:
-    level: info
+    level: debug
     appenders:
         - file
